# kafka-connect-hdfs

./: CMakeLists.txt  pom.xml
checkstyle/: suppressions.xml
rpm_conf/: build_version.sh  confluent-kafka-connect-hdfs.spec
src/main/java/io/confluent/connect/hdfs/: DataWriter.java  FileCommitter.java  FileMerger.java  FileUtils.java  HdfsSinkConnectorConfig.java  HdfsSinkTask.java  RecordWriterProvider.java  TempFileLimiter.java  TopicPartitionWriter.java
src/main/java/io/confluent/connect/hdfs/avro/: AvroFileAppender.java  AvroRecordWriterProvider.java
src/main/java/io/confluent/connect/hdfs/parquet/: ParquetRecordWriterProvider.java
src/main/java/io/confluent/connect/hdfs/storage/: HdfsStorage.java  Storage.java
src/main/java/io/confluent/connect/hdfs/wal/: FSWAL.java  WALConstants.java  WALFile.java
src/test/java/io/confluent/connect/hdfs/: FailureRecoveryTest.java  HdfsSinkTaskTest.java  HdfsSinkTaskTestWithSecureHDFS.java  TestWithMiniDFSCluster.java
src/test/java/io/confluent/connect/hdfs/avro/: DataWriterAvroTest.java  TopicPartitionWriterTest.java
src/test/java/io/confluent/connect/hdfs/utils/: MemoryRecordWriterProvider.java  MemoryStorage.java
src/test/java/io/confluent/connect/hdfs/wal/: FSWALTest.java  WALTest.java
